# reumelv

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  gdb_commands.md
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json  postinstall.sh
kernel/: Cargo.toml  build.rs
kernel/src/: asm.rs  exception_handler.rs  hardware.rs  ipc.rs  macros.rs  main.rs  panic_handler.rs  queue.rs  setup.rs  sys.rs  system_calls.rs
kernel/src/asm/: boot.S  exception.S
kernel/src/hardware/: binary_struct.rs  clint.rs  memory_mapping.rs  pcb.rs  plic.rs  pmp.rs  stack.rs  stack_image.rs  uart.rs
kernel/src/lds/: kernel.lds
kernel/src/sys/: dispatcher.rs  process.rs  scheduler.rs  state.rs
riscv/: Cargo.toml
riscv/src/: lib.rs  reg.rs  sys_call.rs
scripts/: dump_dtb.sh
uart/: Cargo.toml  build.rs
uart/src/: uart.rs
uart/src/lds/: uart.lds
user_1/: Cargo.toml  build.rs
user_1/src/: user_1.rs
user_1/src/lds/: user_1.lds
user_2/: Cargo.toml  build.rs
user_2/src/: user_2.rs
user_2/src/lds/: user_2.lds
user_shared/: Cargo.toml
user_shared/src/: asm.rs  lib.rs  macros.rs  message.rs  panic_handler.rs  sys_call.rs  traits.rs
user_shared/src/asm/: user.S
