[package]
authors = ["Timo Renk <timo.renk@stud.uni-bamberg.de>", "Fabian Adam <fabian-david.adam@stud.uni-bamberg.de>","Leonhard Kohn <leonhard.kohn@stud.uni-bamberg.de>","Tobias Treuheit <tobias-niklas.treuheit@stud.uni-bamberg.de>","Max Meidinger <max_meidinger@stud.uni-bamberg.de>"]
edition = "2021"
name = "riscv_rust_os"
version = "0.1.0"

[dependencies]
riscv_utils = {path = "../riscv"}
